--- a/pinyougou-shop-web/pom.xml
+++ b/pinyougou-shop-web/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>pinyougou-sellgoods-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
