--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>pinyougou-sellgoods-service</module>
         <module>pinyougou-manager-web</module>
         <module>pinyougou-shop-web</module>
+        <module>pinyougou-content-interface</module>
+        <module>pinyougou-content-service</module>
     </modules>
 
 
