--- a/pinyougou-pojo/pom.xml
+++ b/pinyougou-pojo/pom.xml
@@ -19,5 +19,10 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-solr</artifactId>
+            <version>1.5.5.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
