pinyougou-search-interface&service prepare

--- a/pinyougou-solr-util/pom.xml
+++ b/pinyougou-solr-util/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-        </dependency>
+        </dependency>e
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
