--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>pinyougou-content-service</module>
         <module>pinyougou-portal-web</module>
         <module>pinyougou-solr-util</module>
+        <module>pinyougou-search-interface</module>
+        <module>pinyougou-search-service</module>
     </modules>
 
 
