--- a/pinyougou-manager-web/pom.xml
+++ b/pinyougou-manager-web/pom.xml
@@ -19,6 +19,12 @@
     <dependencies>
         <dependency>
             <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-search-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-sellgoods-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
