--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>pinyougou-search-interface</module>
         <module>pinyougou-search-service</module>
         <module>pinyougou-search-web</module>
+        <module>pinyougou-page-interface</module>
     </modules>
 
 
