--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>pinyougou-search-service</module>
         <module>pinyougou-search-web</module>
         <module>pinyougou-page-interface</module>
+        <module>pinyougou-page-service</module>
     </modules>
 
 
