--- a/pinyougou-user-web/src/main/webapp/WEB-INF/web.xml
+++ b/pinyougou-user-web/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,26 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:spring/spring-security.xml</param-value>
+  </context-param>
+  <listener>
+    <listener-class>
+      org.springframework.web.context.ContextLoaderListener
+    </listener-class>
+  </listener>
+
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -36,4 +56,7 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
+  <welcome-file-list>
+    <welcome-file>home-index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
