pinyougou-common-CookieUtil

--- a/pinyougou-common/pom.xml
+++ b/pinyougou-common/pom.xml
@@ -31,6 +31,12 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
