--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <module>pinyougou-cart-interface</module>
         <module>pinyougou-cart-service</module>
         <module>pinyougou-cart-web</module>
+        <module>pinyougou-order-interface</module>
+        <module>pinyougou-order-service</module>
     </modules>
 
 
