--- a/pinyougou-cart-web/pom.xml
+++ b/pinyougou-cart-web/pom.xml
@@ -19,6 +19,12 @@
     <dependencies>
         <dependency>
             <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-pay-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-order-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
