--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <module>pinyougou-cart-web</module>
         <module>pinyougou-order-interface</module>
         <module>pinyougou-order-service</module>
+        <module>pinyougou-pay-interface</module>
+        <module>pinyougou-pay-service</module>
     </modules>
 
 
