--- a/pinyougou-dao/pom.xml
+++ b/pinyougou-dao/pom.xml
@@ -11,6 +11,26 @@
     <packaging>jar</packaging>
     <artifactId>pinyougou-dao</artifactId>
 
+    <properties>
+        <env>dev</env>
+    </properties>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+        </profile>
+        <profile>
+            <id>pro</id>
+            <properties>
+                <env>pro</env>
+            </properties>
+        </profile>
+    </profiles>
+
+
     <dependencies>
         <dependency>
             <groupId>com.pinyougou</groupId>
@@ -54,4 +74,15 @@
         </dependency>-->
     </dependencies>
 
+    <build>
+        <filters>
+            <filter>src/main/resources/filters/db_${env}.properties</filter>
+        </filters>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
