--- a/pinyougou-shop-web/src/main/webapp/WEB-INF/web.xml
+++ b/pinyougou-shop-web/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,7 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -38,7 +39,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring/spring-security.xml</param-value>
+    <param-value>classpath:spring/*.xml</param-value>
   </context-param>
   <listener>
     <listener-class>
